Actualización index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Diario Coquette 🎀</title>
+    <title>Mi Diario de estudio 🎀</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Playfair+Display:ital,wght@0,400;0,700;1,400&family=Quicksand:wght@400;600&display=swap');
 
@@ -904,4 +904,5 @@
         loadVolume('bookOfMormon');
     </script>
 </body>
+
 </html>
